[package]
name = "rbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { package = "crypto", path="../../crypto"}
consensus = { package = "consensus", path="../"}
types = { package = "types", path="../../types"}
config = { package = "config", path="../../config"}
tokio = { version = "1.0", features = ["full"] }
futures = "^0.3"
bincode = "1"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"
serde = "1.0.70"
log="*"
priority-queue="1"
fnv = "1"
async-recursion = "1.0.0"
anyhow = "1"

network = { package = "network", git = "https://github.com/libdist-rs/libnet-rs.git" }
async-trait = "0"
futures-util = "0"